[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "stratadb"
version = "0.6.0"
description = "Python SDK for StrataDB - an embedded database for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["database", "embedded", "ai", "agents", "vector", "kv"]
authors = [
    {name = "StrataDB Labs"}
]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://stratadb.org"
Repository = "https://github.com/stratadb-labs/strata-python"
Documentation = "https://stratadb.org"

[tool.maturin]
features = ["pyo3/extension-module", "embed"]
python-source = "python"
module-name = "stratadb._stratadb"
